# X2-SvBony241Pro

./: .gitignore  99-sv241pro.rules  AGENTS.md  CMakeLists.txt  Makefile  PROTOCOL.md  README.md  install.ps1  install.sh  main.cpp  main.h  powercontrollist Svbony.txt  sv241pro.ui  version.h  x2svbony241pro.cpp  x2svbony241pro.h
.github/workflows/: build.yml
